# neutron

./: CMakeLists.txt  README.md
api/: CMakeLists.txt
api/api/: encrypted_data.proto  event.proto  exception_code.proto  request.proto
api/api/chat/: event.proto  message.proto  request.proto  type.proto
api/api/chat/event/: chat_created.proto  chat_deleted.proto  key_rotate.proto  member_added.proto  member_deleted.proto  message_edited.proto  new_message.proto
api/api/chat/request/: add_member.proto  create.proto  create_group.proto  delete.proto  delete_group.proto  delete_member.proto  get_chats.proto  get_info.proto  get_members.proto  send_message.proto  sync.proto
api/api/chat/response/: add_member.proto  create.proto  create_group.proto  delete.proto  delete_group.proto  delete_member.proto  get_chats.proto  get_info.proto  get_members.proto  send_message.proto  sync.proto
api/api/user/: connection.proto  event.proto  one_time_key.proto  request.proto
api/api/user/event/: connection_accepted.proto  connection_created.proto  connection_deleted.proto
api/api/user/request/: accept_connection.proto  create_connection.proto  delete_connection.proto  edit_password.proto  edit_photo.proto  get_connections.proto  get_devices.proto  get_info.proto  logout.proto  revoke_device.proto  sign_in.proto  sign_up.proto  upload_one_time_key.proto
api/api/user/response/: accept_connection.proto  create_connection.proto  delete_connection.proto  get_connections.proto  get_devices.proto  sign_in.proto  sign_up.proto  upload_one_time_key.proto
client/: CMakeLists.txt  main.cpp
client/qml/: main.qml
lib/: CMakeLists.txt
lib/api/: CMakeLists.txt
lib/communication/: CMakeLists.txt  client.cpp  client.hpp  client_p.hpp  server.cpp  server.hpp  server_p.hpp
lib/communication/detail/: base.cpp  base.hpp  base_p.hpp
lib/communication/detail/api/structures/: event.hpp  exception.hpp  message.hpp  raw_data.hpp  request.hpp  response.hpp
lib/communication/detail/api/types/: exception_code.hpp  message_type.hpp  request_identifier.hpp
lib/crypto/: CMakeLists.txt  argon2.cpp  argon2.hpp  chacha20poly1305.cpp  chacha20poly1305.hpp  falcon.cpp  falcon.hpp  helpers.cpp  helpers.hpp  sha3.cpp  sha3.hpp  sha3_mac.hpp  sidhp434_compressed.cpp  sidhp434_compressed.hpp
lib/protocol/: CMakeLists.txt  connection.cpp  connection.hpp  connection_p.hpp  server.cpp  server.hpp  server_p.hpp  stream.cpp  stream.hpp  stream_p.hpp
lib/protocol/detail/: async_recursive_read_datagram.hpp  async_send_datagram.cpp  async_send_datagram.hpp  send_datagram.cpp  send_datagram.hpp
lib/protocol/detail/connection/: ack_manager.cpp  ack_manager.hpp  anti_replay_window.hpp  congestion_manager.cpp  congestion_manager.hpp  crypto_manager.cpp  crypto_manager.hpp  events.cpp  events.hpp  in_data_queue.cpp  in_data_queue.hpp  internal_data.hpp  network_manager.cpp  network_manager.hpp  out_control_queue.cpp  out_control_queue.hpp  out_data_queue.cpp  out_data_queue.hpp  packet_builder.cpp  packet_builder.hpp  packet_handler.cpp  packet_handler.hpp  rto_manager.cpp  rto_manager.hpp  serial_number.hpp  state_manager.cpp  state_manager.hpp  stream_manager.cpp  stream_manager.hpp  timer_manager.cpp  timer_manager.hpp
lib/protocol/detail/connection/api/structures/: abort.hpp  chunk.hpp  chunk_list.hpp  encrypted_packet_data.hpp  forward_cumulative_tsn.hpp  heartbeat_acknowledgement.hpp  heartbeat_request.hpp  initiation.hpp  initiation_acknowledgement.hpp  initiation_complete.hpp  packet.hpp  payload_data.hpp  selective_acknowledgement.hpp  shutdown_acknowledgement.hpp  shutdown_association.hpp  shutdown_complete.hpp
lib/protocol/detail/connection/api/types/: chunk_type.hpp  connection_id.hpp  forward_tsn_stream.hpp  gap_ack_block.hpp  gap_ack_offset.hpp  heartbeat_info.hpp  nonce.hpp  packet_bits.hpp  payload_data_bits.hpp  stream_identifier.hpp  stream_sequence_number.hpp  transmission_sequence_number.hpp
lib/serialization/: CMakeLists.txt  buffer_builder.hpp  packed_dynamic_array.hpp  packed_enum.hpp  packed_integer.hpp  packed_static_array.hpp  packed_struct.hpp
lib/utils/: CMakeLists.txt  event.hpp  hash_combine.hpp  hash_range.hpp  lockable.hpp  optional_ref.hpp  parentable.hpp  scope_guard.cpp  scope_guard.hpp  singleton.hpp
lib/utils/abstract/: iresetable.hpp
lib/utils/debug/: assert.cpp  assert.hpp
lib/utils/pair/: hasher.hpp
lib/utils/span/: copy.hpp  equal_to.hpp  from.hpp  hasher.hpp
server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp  server_impl.hpp  server_p.hpp
server/detail/: client.cpp  client.hpp  client_manager.cpp  client_manager.hpp  database_manager.cpp  database_manager.hpp  network_manager.cpp  network_manager.hpp  path_manager.cpp  path_manager.hpp  request_handler.cpp  request_handler.hpp
server/detail/request_handlers/: helpers.cpp  helpers.hpp
server/detail/request_handlers/chat/: add_member.cpp  create.cpp  create_group.cpp  delete.cpp  delete_member.cpp  get_chats.cpp  get_members.cpp  send_message.cpp  sync.cpp
server/detail/request_handlers/user/: accept_connection.cpp  create_connection.cpp  delete_connection.cpp  get_connections.cpp  get_devices.cpp  get_info.cpp  logout.cpp  revoke_device.cpp  sign_in.cpp  sign_up.cpp  upload_one_time_key.cpp
tests/: CMakeLists.txt
tests/crypto/: CMakeLists.txt  test_chacha20poly1305.cpp  test_sha3_256.cpp  test_sha3_384.cpp  test_sha3_512.cpp  test_shake128.cpp  test_shake256.cpp  test_sidhp434_compressed.cpp  test_xchacha20poly1305.cpp
